--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
         <title>homepage</title>
     </head>
     <body>
+        <p style="text-align:center;">
         <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+        </p>
+        <p style="text-align:center;">
+            Search:<br>
+        <input type="search" size="30">
+        </p>      
     </body>
 </html>
